syntax = "proto3";
package stacknavigator;

option go_package = "stacknavigator";
option objc_class_prefix = "MochiPBStackNavigator";

message Screen {
    int64 id = 1;
    string title = 2;
    bool customBackButtonTitle = 8;
    string backButtonTitle = 3;
    bool backButtonHidden = 4;
    int64 titleViewId = 5;
    repeated int64 rightViewIds = 6;
    repeated int64 leftViewIds = 7;
}

message StackNavigator {
    repeated Screen screens = 1;
}